unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mission</label>
    <referenceTo>Mission__c</referenceTo>
    <relationshipLabel>S-Docs Relationships</relationshipLabel>
    <relationshipName>S_Docs_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>