unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Case__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>S-Docs</relationshipLabel>
    <relationshipName>SDoc_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>