unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Created__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Created__c</fullName>
    <formula>SDOC__SDoc__r.CreatedBy.FirstName +&#39; &#39; + SDOC__SDoc__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Created By</label>
    <type>Text</type>
</CustomField>