unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Document_Comment__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Document_Comment__c</fullName>
    <formula>SDOC__SDoc__r.SDOC__Comment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comments</label>
    <type>Text</type>
</CustomField>