unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Document_Name__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Document_Name__c</fullName>
    <formula>SDOC__SDoc__r.SDOC__Document_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>