unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Document_Number__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Document_Number__c</fullName>
    <formula>HYPERLINK(
&quot;/&quot;+ Id
,SDOC__SDoc__r.SDOC__Document_Number__c
,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doc Number</label>
    <type>Text</type>
</CustomField>