unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Document_Status__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Document_Status__c</fullName>
    <formula>TEXT(SDOC__SDoc__r.SDOC__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>