unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Edit_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Edit_Link__c</fullName>
    <formula>SDOC__SDoc__r.SDOC__Edit_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit</label>
    <type>Text</type>
</CustomField>