unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Lead__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>S-Docs</relationshipLabel>
    <relationshipName>SDoc_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>