unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__SDoc_Rel_GD_Status__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc_Rel_GD_Status__c</fullName>
    <label>Doc Link Status (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Linked</fullName>
            </value>
            <value>
                <fullName>Linked to Google Doc</fullName>
            </value>
            <value>
                <fullName>Linked to Attachment</fullName>
            </value>
            <value>
                <fullName>FIELD_IS_DEPRECATED</fullName>
                <default>true</default>
                <label>Field Is Deprecated (Use SDoc_Rel_GD_Status_Text__c instead)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>