unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__SDoc_Rel_Status__c.field-meta.xml
<CustomField>
    <fullName>SDOC__SDoc_Rel_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Mailed</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Pending Client Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Client</fullName>
            </value>
            <value>
                <fullName>Signed Pending Processing</fullName>
            </value>
            <value>
                <fullName>Signed Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>