unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Solution__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>S-Docs</relationshipLabel>
    <relationshipName>SDoc_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>