unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__Upload__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Upload__c</fullName>
    <formula>SDOC__SDoc__r.SDOC__Upload__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload New</label>
    <type>Text</type>
</CustomField>