unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/SDOC__View_Link__c.field-meta.xml
<CustomField>
    <fullName>SDOC__View_Link__c</fullName>
    <formula>SDOC__SDoc__r.SDOC__View_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>