unpackaged/main/default/objects/SDOC__SDRelationship__c/fields/Traveler__c.field-meta.xml
<CustomField>
    <fullName>Traveler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Traveler</label>
    <referenceTo>Traveler__c</referenceTo>
    <relationshipLabel>S-Docs Relationships</relationshipLabel>
    <relationshipName>S_Docs_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>